--- a/sacda_test.breakpoints.yml
+++ b/sacda_test.breakpoints.yml
@@ -1,30 +1,37 @@
-sacda_test.extra_small:
+mobile:
   label: mobile
   mediaQuery: ''
+  weight: -1
+  multipliers:
+    - 1x
+
+sm:
+  label: sm
+  mediaQuery: 'all and (min-width: 40rem)'
   weight: 0
   multipliers:
     - 1x
-sacda_test.small:
-  label: mobile
-  mediaQuery: 'all and (min-width: 576px) and (max-width: 767px)'
+md:
+  label: md
+  mediaQuery: 'all and (min-width: 48rem)'
   weight: 1
   multipliers:
     - 1x
-sacda_test.medium:
-  label: narrow
-  mediaQuery: 'all and (min-width: 768px) and (max-width: 991px)'
+lg:
+  label: lg
+  mediaQuery: 'all and (min-width: 64rem)'
   weight: 2
   multipliers:
     - 1x
-sacda_test.large:
-  label: wide
-  mediaQuery: 'all and (min-width: 992px) and (max-width: 1199px)'
+xl:
+  label: xl
+  mediaQuery: 'all and (min-width: 80rem)'
   weight: 3
   multipliers:
     - 1x
-sacda_test.extra_large:
-  label: wide
-  mediaQuery: 'all and (min-width: 1200px)'
+2xl:
+  label: 2xl
+  mediaQuery: 'all and (min-width: 96rem)'
   weight: 4
   multipliers:
     - 1x
