--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
   "name": "sacda_test",
   "private": true,
+  "type": "module",
   "scripts": {
+    "build": "node build.js",
     "livereload": "livereload --exclusions node_modules/ --exts 'css,js,twig,theme,apng,avif,gif,jpg,jpeg,jfif,pjpeg,pjp,png,svg,webp'",
     "tailwind": "tailwindcss -i ./css/main.css -o ./dist/main.css --watch",
     "dev": "concurrently \"pnpm run tailwind\" \"pnpm run livereload\""
   },
   "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^6.2.0",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tsconfig/svelte": "^5.0.5",
+    "autoprefixer": "^10.4.18",
     "concurrently": "^9.1.0",
-    "livereload": "^0.9.3"
+    "livereload": "^0.9.3",
+    "postcss": "^8.4.35",
+    "svelte": "^5.39.4",
+    "svelte-check": "^4.3.1",
+    "typescript": "~5.8.3",
+    "vite": "npm:rolldown-vite@7.1.12"
   },
   "dependencies": {
-    "@tailwindcss/cli": "^4.1.17",
-    "tailwindcss": "^4.1.17"
+    "@tailwindcss/cli": "^4.1.18",
+    "tailwindcss": "^4.1.18"
   }
 }
