--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "dev": "concurrently \"pnpm run tailwind\" \"pnpm run livereload\""
   },
   "devDependencies": {
+    "@internationalized/date": "^3.10.0",
+    "@lucide/svelte": "^0.544.0",
     "@sveltejs/vite-plugin-svelte": "^6.2.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@tsconfig/svelte": "^5.0.5",
     "autoprefixer": "^10.4.18",
+    "bits-ui": "^2.14.4",
+    "clsx": "^2.1.1",
     "concurrently": "^9.1.0",
     "livereload": "^0.9.3",
     "postcss": "^8.4.35",
     "svelte": "^5.39.4",
     "svelte-check": "^4.3.1",
+    "tailwind-merge": "^3.4.0",
+    "tailwind-variants": "^3.2.2",
     "typescript": "~5.8.3",
     "vite": "npm:rolldown-vite@7.1.12"
   },
