feat: some scaffolding

--- a/sacda_test.info.yml
+++ b/sacda_test.info.yml
@@ -7,13 +7,13 @@ core_version_requirement: ^10
 # libraries:
 #   - sacda_test/global
 regions:
-  # header: "Header"
-  # menu_top: "Top menu"
+  header: "Header"
+  menu_top: "Top menu"
   primary_menu: "Primary menu"
 
   content: "Content"
 
-  # sidebar_first: "Sidebar first"
-  # sidebar_second: "Sidebar second"
+  sidebar_first: "Sidebar first"
+  sidebar_second: "Sidebar second"
 
   footer: "Footer"
